# market-watcher-demo

./: .env.example  .gitignore  README.md  config.toml  justfile  packages.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/fixtures/: categories.json  category_strategy.json  category_strategy.md  certifications.json  contract_pipeline.json  downstream_agents.json  industry_risks.json  market_intel.json  mock_news_seed.json  pestle.json  regulations.json  spend_by_category.csv  spend_by_subcategory.csv
data/fixtures/suppliers/cloud_infrastructure/: aws.json  gcp.json  microsoft.json
data/fixtures/suppliers/it_software/: atlassian.json  microsoft.json  oracle.json  pega.json  salesforce.json  sap.json  servicenow.json  snowflake.json  workday.json
src/market_watcher/: __init__.py  cli.py  config.py  llm_client.py  main.py  orchestrator.py
src/market_watcher/prompts/: batch_agent.md  query_agent.md
src/market_watcher/subagents/: batch.py  query.py
src/market_watcher/tools/: document_gen.py  mock_services.py  retrieval.py  trace_viewer.py  tracer.py  web_search.py
src/market_watcher/ui/: agent_theatre.py  styles.py  tab_buyer_guide.py  tab_category_placeholder.py  tab_dashboard.py  tab_digest.py  tab_strategy.py
tests/: test_smoke.py
