[project]
name = "market-watcher-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50",
    "openai-agents>=0.1",
    "streamlit>=1.36",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pypdf>=4.3",
    "chromadb>=0.5",
    "tenacity>=9.0",
    "rich>=13.7",
    "typer>=0.12",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_watcher"]
